# LifeOS

./: .env.example  .gitignore  pyproject.toml
.github/workflows/: ci.yml
app/: cli.py  container.py  main.py  stubs.py
app/agent/: __init__.py  simple_agent.py  simple_context_builder.py  simple_conversation_engine.py  tool_conversation_engine.py
app/api/: chat.py
app/config/: settings.py
app/context/: __init__.py  (+6 more)
docs/: README.md  architecture-review.md  architecture.md  dogfooding.md  plugin-api-review.md  roadmap.md  vision.md
tests/: pdf_fixtures.py  test_agent.py  test_chat_stream.py  test_cli.py  test_container.py  test_document_ingestion_service.py  test_extractor_invariant.py  test_extractor_registry.py  test_fixed_size_chunker.py  test_health.py  test_in_memory_knowledge_provider.py  test_knowledge_context_layer.py  test_knowledge_tools.py  test_layered_context_builder.py  test_markdown_extractor.py  test_memory_context_integration.py  test_memory_context_layer.py  test_memory_tools.py  test_openai_mapper.py  test_openai_provider.py  test_pdf_extractor.py  test_plain_text_extractor.py  test_plugin_contributed_context_layer.py  test_plugin_contributed_extractor.py  test_plugin_contributed_tool.py  test_plugin_lifecycle.py  test_semantic_sqlite_knowledge_provider.py  test_semantic_sqlite_memory_provider.py  test_similarity.py  test_sqlite_knowledge_provider.py  test_sqlite_memory_provider.py  test_streaming.py  test_threshold_knowledge_ranker.py  test_threshold_memory_ranker.py  test_tool_conversation_engine.py  test_tool_manager.py
(+70 files in other folders)
